@@ -1,9 +1,12 @@
 package com.anicriticas.lolanalyzer.discord.options;
 
 import com.anicriticas.lolanalyzer.enums.RegionEnum;
-import net.dv8tion.jda.api.interactions.commands.OptionType;
-import net.dv8tion.jda.api.interactions.commands.build.OptionData;
+import discord4j.core.object.command.ApplicationCommandOption;
+import discord4j.discordjson.json.ApplicationCommandOptionChoiceData;
+import discord4j.discordjson.json.ApplicationCommandOptionData;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class PlayerIdentifierOptions {
@@ -12,29 +15,54 @@ public class PlayerIdentifierOptions {
     public static final String riotIdOption = "riot-id";
     public static final String regionOption = "region";
 
-    public static List<OptionData> getPlayerIdentifierOptions() {
-        OptionData nickNameOption = new OptionData(OptionType.STRING, PlayerIdentifierOptions.riotNickNameOption, "Riot nick name", true);
+    public static List<ApplicationCommandOptionData> getPlayerIdentifierOptions() {
+        List<ApplicationCommandOptionData> playerIdentifiesOptions = new ArrayList<>();
 
-        OptionData riotIdOption = new OptionData(OptionType.STRING, PlayerIdentifierOptions.riotIdOption, "Riot Identifier Ex. BR1 | Without #", true);
+        ApplicationCommandOptionData nickNameOption = ApplicationCommandOptionData.builder()
+                .name(PlayerIdentifierOptions.riotNickNameOption)
+                .description("Riot nick name")
+                .type(ApplicationCommandOption.Type.STRING.getValue())
+                .required(true)
+                .build();
 
-        OptionData regionOption = new OptionData(OptionType.STRING, PlayerIdentifierOptions.regionOption, "Region", true)
-                .addChoice(RegionEnum.BR1.getRegionName(), RegionEnum.BR1.getRegionName())
-                .addChoice(RegionEnum.NA1.getRegionName(), RegionEnum.NA1.getRegionName())
-                .addChoice(RegionEnum.EUN1.getRegionName(), RegionEnum.EUN1.getRegionName())
-                .addChoice(RegionEnum.EUW1.getRegionName(), RegionEnum.EUW1.getRegionName())
-                .addChoice(RegionEnum.JP1.getRegionName(), RegionEnum.JP1.getRegionName())
-                .addChoice(RegionEnum.KR.getRegionName(), RegionEnum.KR.getRegionName())
-                .addChoice(RegionEnum.LA1.getRegionName(), RegionEnum.LA1.getRegionName())
-                .addChoice(RegionEnum.LA2.getRegionName(), RegionEnum.LA2.getRegionName())
-                .addChoice(RegionEnum.OC1.getRegionName(), RegionEnum.OC1.getRegionName())
-                .addChoice(RegionEnum.PH2.getRegionName(), RegionEnum.PH2.getRegionName())
-                .addChoice(RegionEnum.RU.getRegionName(), RegionEnum.RU.getRegionName())
-                .addChoice(RegionEnum.SG2.getRegionName(), RegionEnum.SG2.getRegionName())
-                .addChoice(RegionEnum.TH2.getRegionName(), RegionEnum.TH2.getRegionName())
-                .addChoice(RegionEnum.TR1.getRegionName(), RegionEnum.TR1.getRegionName())
-                .addChoice(RegionEnum.TW2.getRegionName(), RegionEnum.TW2.getRegionName())
-                .addChoice(RegionEnum.VN2.getRegionName(), RegionEnum.VN2.getRegionName());
+        ApplicationCommandOptionData riotIdOption = ApplicationCommandOptionData.builder()
+                .name(PlayerIdentifierOptions.riotIdOption)
+                .description("Riot Identifier Ex. BR1")
+                .type(ApplicationCommandOption.Type.STRING.getValue())
+                .required(true)
+                .build();
 
-        return List.of(nickNameOption, riotIdOption, regionOption);
+        List<ApplicationCommandOptionChoiceData> regionChoices = Arrays.asList(
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.BR1.getRegionName()).value(RegionEnum.BR1.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.NA1.getRegionName()).value(RegionEnum.NA1.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.EUN1.getRegionName()).value(RegionEnum.EUN1.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.EUW1.getRegionName()).value(RegionEnum.EUW1.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.JP1.getRegionName()).value(RegionEnum.JP1.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.KR.getRegionName()).value(RegionEnum.KR.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.LA1.getRegionName()).value(RegionEnum.LA1.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.LA2.getRegionName()).value(RegionEnum.LA2.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.OC1.getRegionName()).value(RegionEnum.OC1.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.PH2.getRegionName()).value(RegionEnum.PH2.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.RU.getRegionName()).value(RegionEnum.RU.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.SG2.getRegionName()).value(RegionEnum.SG2.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.TH2.getRegionName()).value(RegionEnum.TH2.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.TR1.getRegionName()).value(RegionEnum.TR1.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.TW2.getRegionName()).value(RegionEnum.TW2.getRegionName()).build(),
+                ApplicationCommandOptionChoiceData.builder().name(RegionEnum.VN2.getRegionName()).value(RegionEnum.VN2.getRegionName()).build()
+        );
+
+        ApplicationCommandOptionData regionOption = ApplicationCommandOptionData.builder()
+                .name(PlayerIdentifierOptions.regionOption)
+                .description("Riot account region")
+                .type(ApplicationCommandOption.Type.STRING.getValue())
+                .choices(regionChoices)
+                .required(true)
+                .build();
+
+        playerIdentifiesOptions.add(nickNameOption);
+        playerIdentifiesOptions.add(riotIdOption);
+        playerIdentifiesOptions.add(regionOption);
+
+        return playerIdentifiesOptions;
     }
 }
